# libreblackjack

./: .gitignore  AUTHORS  ChangeLog.md  Makefile.am  README.md  TODO  TODO.md  autoclean.sh  autogen.sh  blackjack.conf  bs.txt  check-internal.sh  configure.ac
.github/: compile_and_test.yaml
.github/workflows/: compile_and_test.yaml
doc/: .gitignore  Makefile.am  blackjack.md  blackjack.texi  commands-inf.md  commands-int.md  conf.md  help-extra.txt  help-md.sh  help-options-base.txt  help-options-txt.sh  help-txt.sh  help-usage.txt  help.md  help.sh  help.txt  interactive.cast  interactive2.cast  libreblackjack.texi  make.sh  md2.sh  md2texi.sh  messages.sh  overview.md  players  players.md  reference.sh  syntax.tex  template.texi
players/: README.md  check.md  check.sh  make.sh  run.sh
players/00-internal/: README.m4  README.md  run.sh
players/02-always-stand/: README.m4  README.md  run.sh
players/05-no-bust/: README.m4  README.md  diff.sh  no-bust.awk  no-bust.pl  no-bust.sh  perl.yml  run.sh  shell.yml
players/08-mimic-the-dealer/: .gitignore  README.m4  README.md  blackjack.conf  mimic-the-dealer.awk  run.sh
players/10-random/: .gitignore  README.md  blackjack.conf  player_random.py  run.sh
players/20-basic-strategy/: README.m4  README.md  chart.py  html_cell.awk  options.conf  run.sh
players/25-enhc/: blackjack.conf  enhc-s17-das-doa.txt  enhc.txt
players/30-ace-five/: README.m4  README.md  ace-five.py  run.sh
players/35-informed/: blackjack.conf  cards.txt
src/: base.cpp  base.h  blackjack.cpp  blackjack.h  cards.cpp  conf.cpp  conf.h  dealer.cpp  dealer.h  internal.cpp  internal.h  main.cpp  report.cpp  stdinout.cpp  stdinout.h  tty.cpp  tty.h  version.cpp
src/players/: basic.cpp  basic.h  informed.cpp  informed.h  stdinout.cpp  stdinout.h  tty.cpp  tty.h
tests/: 0-enhc-s17-das-doa-rsa.conf  6-enhc-s17-das-doa-rsa.conf  functions.sh  internal.sh  mimic-the-dealer.sh  no-bust.sh  stand.sh  variance.sh
tests/0deck-s17/: 0deck-s17.txt  README.md  blackjack.conf
tests/variance/: README.md  blackjack.conf  cards.txt  play.txt
utils/: README.md  analyze.py  card_frequency.py  csm.py  entropy_check.py  runs_test.py  serial_corr.py  shoe.py
